Use System.arraycopy